Replace Math.max/min clamping with Math.clamp
WandListener.clampScale() and the private clamp() helper are
replaced with Math.clamp() (Java 21). The helper method is deleted
and its two call sites inlined with Math.clamp() directly.